spacing fix

--- a/plugins/carkeek-site-blocks/src/expand-collapse-section/style.scss
+++ b/plugins/carkeek-site-blocks/src/expand-collapse-section/style.scss
@@ -11,6 +11,10 @@
 			margin-top:0;
 			margin-bottom: 0;
 		}
+		& p {
+			margin-top:0;
+			margin-bottom: 0;
+		}
 	}
 	& .cks-expand-button {
 		& span {
